--- a/src/main/resources/application-db.properties
+++ b/src/main/resources/application-db.properties
@@ -27,11 +27,17 @@ server.port = 8080
 #spring.thymeleaf.suffix=.html
 
 # database configs
-spring.datasource.url=jdbc:mysql://localhost:3306/projetonext
+spring.datasource.url=jdbc:mysql://localhost:3306/teste_api
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
